syntax = "proto3";

package common;

option go_package = "mebellar-backend/pkg/pb;pb";

import "google/protobuf/timestamp.proto";

// ============================================
// SHARED TYPES
// ============================================

// LocalizedString - Multi-language text (uz, ru, en)
message LocalizedString {
  string uz = 1;
  string ru = 2;
  string en = 3;
}

// Pagination request/response helpers
message PaginationRequest {
  int32 page = 1;
  int32 limit = 2;
}

message PaginationResponse {
  int32 total = 1;
  int32 page = 2;
  int32 limit = 3;
  int32 total_pages = 4;
}

// Empty message for RPCs that don't need a request/response
message Empty {}

// ============================================
// REGION SERVICE
// ============================================

message Region {
  int32 id = 1;
  string name = 2;  // Legacy plain string
  LocalizedString name_localized = 3;  // Multi-language
  string code = 4;  // ISO 3166-2 code (e.g., UZ-TK)
  bool is_active = 5;
  int32 ordering = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
}

message ListRegionsRequest {
  bool active_only = 1;
}

message ListRegionsResponse {
  repeated Region regions = 1;
  int32 count = 2;
}

message GetRegionRequest {
  int32 id = 1;
}

message CreateRegionRequest {
  LocalizedString name = 1;
  string code = 2;
  int32 ordering = 3;
  bool is_active = 4;
}

message UpdateRegionRequest {
  int32 id = 1;
  optional LocalizedString name = 2;
  optional string code = 3;
  optional int32 ordering = 4;
  optional bool is_active = 5;
}

message RegionResponse {
  Region region = 1;
}

message DeleteRegionRequest {
  int32 id = 1;
}

// ============================================
// BANNER SERVICE
// ============================================

message Banner {
  string id = 1;
  LocalizedString title = 2;
  LocalizedString subtitle = 3;
  string image_url = 4;
  string target_type = 5;  // none, category, product, external
  string target_id = 6;
  int32 sort_order = 7;
  bool is_active = 8;
  google.protobuf.Timestamp created_at = 9;
}

message ListBannersRequest {
  bool active_only = 1;
}

message ListBannersResponse {
  repeated Banner banners = 1;
  int32 count = 2;
}

message GetBannerRequest {
  string id = 1;
}

message CreateBannerRequest {
  LocalizedString title = 1;
  LocalizedString subtitle = 2;
  string image_url = 3;
  string target_type = 4;
  string target_id = 5;
  int32 sort_order = 6;
  bool is_active = 7;
}

message UpdateBannerRequest {
  string id = 1;
  optional LocalizedString title = 2;
  optional LocalizedString subtitle = 3;
  optional string image_url = 4;
  optional string target_type = 5;
  optional string target_id = 6;
  optional int32 sort_order = 7;
  optional bool is_active = 8;
}

message BannerResponse {
  Banner banner = 1;
}

message DeleteBannerRequest {
  string id = 1;
}

// ============================================
// CANCELLATION REASONS
// ============================================

message CancellationReason {
  string id = 1;
  LocalizedString text = 2;
  bool is_active = 3;
}

message ListCancellationReasonsRequest {}

message ListCancellationReasonsResponse {
  repeated CancellationReason reasons = 1;
}

// ============================================
// COMMON SERVICE
// ============================================

service CommonService {
  // Regions
  rpc ListRegions(ListRegionsRequest) returns (ListRegionsResponse);
  rpc GetRegion(GetRegionRequest) returns (RegionResponse);
  rpc CreateRegion(CreateRegionRequest) returns (RegionResponse);
  rpc UpdateRegion(UpdateRegionRequest) returns (RegionResponse);
  rpc DeleteRegion(DeleteRegionRequest) returns (Empty);

  // Banners
  rpc ListBanners(ListBannersRequest) returns (ListBannersResponse);
  rpc GetBanner(GetBannerRequest) returns (BannerResponse);
  rpc CreateBanner(CreateBannerRequest) returns (BannerResponse);
  rpc UpdateBanner(UpdateBannerRequest) returns (BannerResponse);
  rpc DeleteBanner(DeleteBannerRequest) returns (Empty);

  // Cancellation Reasons
  rpc ListCancellationReasons(ListCancellationReasonsRequest) returns (ListCancellationReasonsResponse);
}
